remove footer and fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,7 @@ body {
 main {
   margin-bottom: 20px;
   padding: 0 20px;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 nav {
@@ -73,6 +74,7 @@ h1 {
 
 .list {
   padding: 0;
+  margin: 0;
   list-style-type: none;
 }
 
@@ -196,6 +198,7 @@ h1 {
 
 .btn-create {
   padding: 10px 0;
+  line-height: 45px;
 }
 
 .btn-checker {
